--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,23 @@
 </head>
 <body>
     <h1>Hello world</h1>
+
+    <form action="/create" method="post">
+        <input type="text" name="task" id="task">
+    <button id="addButton" type="submit">Add</button>
+
+    </form>
+   
+
+    <ul>
+        <% taskList.forEach((task)=>{ %>
+        <li>
+            <%= task.task %>
+            <%= task.createdAt.toLocaleDateString('pt-br') %>
+        </li>
+        <% }) %>
+    </ul>
+  
     
 
     <script src="script.js"></script>
