--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,23 +9,35 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>To Do List</h1>
 
-    <form action="/create" method="post">
+<header>
+
+    <% if (task == null){ %>
+    <form action="/create" method="POST">
         <input type="text" name="task" id="task">
-    <button id="addButton" type="submit">Add</button>
-
+        <button id="addButton" type="submit">Add</button>
     </form>
+    <% } else { %>
+    <form action="/update/<%= task.id%>" method="POST">
+        <input type="text" name="taskUpd" id="taskUpdt" value="<%= task.task %>">
+        <button id="addButton" type="submit">Refresh</button>
+    </form>
+    <% } %>
+</header>
    
-
+<section id="tasks">
     <ul>
         <% taskList.forEach((task)=>{ %>
         <li>
             <%= task.task %>
             <%= task.createdAt.toLocaleDateString('pt-br') %>
+            <a href="/getById/<%= task.id %>">Edit</a>
+            <a href="">Delete</a>
         </li>
         <% }) %>
     </ul>
+</section>    
   
     
 
