--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,42 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     
     <title>To Do List</title>
 </head>
 <body>
-    <h1>To Do List</h1>
-
-<header>
-
-    <% if (task == null){ %>
-    <form action="/create" method="POST">
-        <input type="text" name="task" id="task">
-        <button id="addButton" type="submit">Add</button>
-    </form>
-    <% } else { %>
-    <form action="/update/<%= task.id%>" method="POST">
-        <input type="text" name="task" id="task" value="<%= task.task %>">
-        <button id="addButton" type="submit">Refresh</button>
-    </form>
+    <% if(message != "") { %>
+    <section class="message message-<%= type %>">
+        <p> <%= message%> </p>
+        <span id="close-message">X</span>
+    </section>
     <% } %>
-</header>
+
+    <header>
+        
+       
+        <h1>To Do List</h1>
+
+        <% if (task == null){ %>
+        <form action="/create" method="POST">
+            <input type="text" name="task" id="task" placeholder="Insert your activity">
+            <button id="addButton" type="submit">Add</button>
+        </form>
+        <% } else { %>
+        <form action="/update/<%= task.id%>" method="POST">
+            <input type="text" name="task" id="task" value="<%= task.task %>">
+            <button id="addButton" type="submit">Refresh</button>
+        </form>
+        <% } %>
+
+    </header>
+
    
 <section id="tasks">
     <ul>
         <% taskList.forEach((task)=>{ %>
         <li>
-            <%= task.task %>
-            <%= task.createdAt.toLocaleDateString('pt-br') %>
-            <a href="/getById/<%= task.id %>">Edit</a>
-            <a href="/delete/<%= task.id %> ">Delete</a>
+            <a href="/"><%= task.task %>
+            <span>  
+                Created in: <%= task.createdAt.toLocaleDateString('pt-br') %>
+            </span>  
+            </a>
+            <div>
+                <a class= "btnEdit"href="/getById/<%= task.id %>">Edit</a>
+                <a href="/delete/<%= task.id %> ">Delete</a>
+            </div>
         </li>
         <% }) %>
     </ul>
 </section>    
-  
-    
+
 
     <script src="script.js"></script>
 </body>
