--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,17 +17,16 @@
     <% } %>
 
     <header>
-        
-       
-        <h1>To Do List</h1>
-
+             
         <% if (task == null){ %>
-        <form action="/create" method="POST">
+            <h1>To Do List</h1>
+            <form action="/create" method="POST">
             <input type="text" name="task" id="task" placeholder="Insert your activity">
             <button id="addButton" type="submit">Add</button>
         </form>
         <% } else { %>
-        <form action="/update/<%= task.id%>" method="POST">
+            <h1>Editing Task</h1>
+            <form action="/update/<%= task.id%>" method="POST">
             <input type="text" name="task" id="task" value="<%= task.task %>">
             <button id="addButton" type="submit">Refresh</button>
         </form>
